refactor: Remove wishlist feature and improve code comments